tests/diagnostics/generic_extern.kal
# extern (C) functions are concrete; they cannot be generic.
extern foo<T>(x: T) -> T;
